--- a/backend/composer.json
+++ b/backend/composer.json
@@ -27,7 +27,8 @@
         "hyperf/memory": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
-        "hyperf/validation": "^3.1"
+        "hyperf/validation": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
