Add email notification feature for withdrawals
- Integrated an EmailService to handle email notifications for successful and scheduled withdrawals.
- Updated TransactionController to send confirmation emails upon withdrawal actions.
- Enhanced README.md with SMTP configuration instructions and email templates for notifications.
- Modified docker-compose.yml to include the backend .env file for environment variables.
- Updated backend/.env.example to include email configuration placeholders.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - "9501:9501"
     volumes:
       - ./backend:/opt/www
+    env_file:
+      - ./backend/.env
     environment:
       - DB_HOST=mysql
       - DB_PORT=3306
