--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,12 @@ REDIS_HOST=localhost
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
+
+MAIL_DRIVER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
